--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "AGPL-3.0",
   "scripts": {
-    "dev": "next",
+    "dev": "standard && next",
     "build": "standard && next build",
     "start": "next start",
     "lint": "standard"
   },
   "dependencies": {
+    "@zeit/next-sass": "^0.1.1",
+    "bulma": "0.6.2",
+    "bulmaswatch": "0.6.2",
     "next": "^5.0.0",
+    "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
