--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "dogfooding",
   "version": "0.0.0",
   "license": "AGPL-3.0",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "scripts": {
     "dev": "standard && next",
     "build": "standard && next build",
     "export": "next export",
     "start": "next start",
+    "now": "mkdir out/_next/static ; cp .next/static/style.css out/_next/static/ && now out --public --static --name=dogfooding",
     "lint": "standard"
   },
   "dependencies": {
-    "@zeit/next-sass": "^0.1.1",
+    "@zeit/next-sass": "^0.1.2",
     "bulma": "0.6.2",
     "bulmaswatch": "0.6.2",
     "next": "^5.0.0",
